# aquatru-connect

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml  pytest.ini  requirements-test.txt  test_client.py
custom_components/aquatru/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  mqtt.py  sensor.py  strings.json
custom_components/aquatru/translations/: en.json
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_init.py  test_mqtt.py  test_sensor.py
